trunk/Archive2/a6/6b958a01dc2475/output
main.cpp: In function ‘int main()’:
main.cpp:13:15: error: invalid use of void expression
  int x = g(f());
               ^
