trunk/Archive2/a6/6b958a01dc2475/main.cpp
#include <iostream>

void f()
{
}
int g(...)
{
    return 0;
}

int main()
{
	int x = g(f());
	std::cout << "x = " << x << std::endl;
}
